--- a/booklet.html
+++ b/booklet.html
@@ -17,13 +17,15 @@
     <!-- CSS Files -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/material-kit.css?v=1.2.1" rel="stylesheet"/>
+    <link rel="stylesheet" href="assets/css/sneedsCustom.css">
 </head>
 <body>
 
 <!-- Navbar will come here -->
 <header>
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-right navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
+
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -31,35 +33,121 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+
+                <a class="navbar-brand yekanFont" href="#">
+                    <span class="yekanFont brandName float-right">
+                        اسنیدز
+                    </span>
+                    <span class="brandLogo float-left">
+                        <img src="assets/img/sneedsLogo.png" alt="sneeds logo" class="img-responsive">
+                    </span>
+                </a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+            <div class="collapse navbar-collapse serifFont" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav float-right text-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">جزوات  <b class="caret"></b></a>
+                        <ul class="dropdown-menu text-center">
+                            <li><a href="#">مهندسی کامپیوتر</a></li>
+                            <li><a href="#">مهندسی برق</a></li>
+                            <li><a href="#">فیزیک</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">همه دسته ها</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
+                            <li><a href="#">دسته خاص</a></li>
                         </ul>
                     </li>
+                    <li><a href="#">تماس با ما</a></li>
+                    <li class="active"><a href="#">صفحه اول</a></li>
                 </ul>
+
+                <form class="navbar-form navbar-left bookletSearchForm" role="search">
+                    <div class="form-group form-primary">
+                        <input type="text" class="form-control serifFont colorWhite" placeholder="جستجو در جزوات">
+                    </div>
+                    <button type="submit" class="btn btn-default btn-sm yekanFont">بگرد</button>
+                </form>
+
             </div>
         </div>
     </nav>
 
+    <div class="page-header header-filter header-small" style="background-image: url(assets/img/bg3.jpg); transform: translate3d(0px, 0px, 0px);">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center">
+                    <h2 class="title yekanFont">اسنیدز، مرجع رفع نیاز های دانشجویی
+                        <br>
+                        بخش جزوات
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 <!-- end navbar -->
 
 <div class="wrapper">
     <div class="header">
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
+        <h1 class="text-center">Hello World!</h1>
         <h1 class="text-center">Hello World!</h1>
     </div>
     <!-- you can use the class main-raised if you want the main area to be as a page with shadows -->
