fixing footer to to smooth scrolling

--- a/bookletList.html
+++ b/bookletList.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/sneedsCustom.css">
 </head>
 <body style="height:100%">
-
+<div id="siteTop"></div>
 <!-- Navbar will come here -->
 
 <nav class="navbar navbar-right navbar-default navbar-fixed-top" role="navigation">
@@ -1051,6 +1051,12 @@
                 Copyright ©
                 <script>document.write(new Date().getFullYear())</script>
                 Sneeds Co. All Rights Reserved
+            </div>
+
+            <div class="pull-center">
+                <button class="btn btn-fab btn-fab-mini pull-center goUpBtn" id="goUpBtn">
+                    <i class="material-icons">keyboard_arrow_up</i>
+                </button>
             </div>
         </div>
     </footer>
