small change top top navigation for better styles while scrolling

--- a/bookletList.html
+++ b/bookletList.html
@@ -24,7 +24,7 @@
 <div id="siteTop"></div>
 <!-- Navbar will come here -->
 
-<nav class="navbar navbar-right navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-right navbar-transparent navbar-fixed-top navbar-color-on-scroll" color-on-scorll="200" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -201,8 +201,8 @@
 </div>
 
 <!-- end navbar -->
-
-<div class="wrapper" id="sneedsBookletListFirst">
+<div id="sneedsBookletListFirst"></div>
+<div class="wrapper">
     <!-- you can use the class main-raised if you want the main area to be as a page with shadows -->
     <div class="main">
         <div class="container">
