--- a/bookletList.html
+++ b/bookletList.html
@@ -71,8 +71,8 @@
 
             <form class="navbar-form navbar-left bookletSearchForm" role="search">
                 <div class="form-group form-primary">
-                    <input type="text" class="form-control yekanFont" style="width:200px;"
-                           placeholder="جستجوی سریع در کل سایت">
+                    <input type="text" class="form-control yekanFont" style="width:200px"
+                           value="جستجوی سریع در کل سایت" id="siteFastSearch">
                 </div>
                 <button type="submit" class="btn btn-default btn-sm yekanFont">بگرد</button>
             </form>
