fixing comments and goUp button removed from footer

--- a/bookletList.html
+++ b/bookletList.html
@@ -263,61 +263,6 @@
                                 است.
                             </p>
 
-
-                            <!--<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">-->
-                            <!--<div class="panel panel-default">-->
-                            <!--<div class="panel-heading" role="tab" id="headingTwo">-->
-                            <!--<a class="collapsed" role="button" data-toggle="collapse"-->
-                            <!--data-parent="#accordion" href="#collapseTwo" aria-expanded="false"-->
-                            <!--aria-controls="collapseTwo">-->
-                            <!--<h4 class="panel-title text-right serifFont">-->
-                            <!--اطلاعات بیشتر-->
-                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                            <!--</h4>-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"-->
-                            <!--aria-labelledby="headingTwo">-->
-                            <!--<div class="panel-body">-->
-                            <!--<p class="serifFont text-justify">-->
-                            <!--لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده-->
-                            <!--از طراحان گرافیک است.-->
-                            <!--لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده-->
-                            <!--از طراحان گرافیک است.-->
-                            <!--</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
-
-                            <!--<div class="panel panel-default">-->
-                            <!--<div class="panel-heading" role="tab" id="headingOne">-->
-                            <!--<a role="button" data-toggle="collapse" data-parent="#accordion"-->
-                            <!--href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">-->
-                            <!--<h4 class="panel-title text-right serifFont">-->
-                            <!--برچسب ها-->
-                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                            <!--</h4>-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div id="collapseOne" class="panel-collapse" role="tabpanel"-->
-                            <!--aria-labelledby="headingOne">-->
-                            <!--<div class="panel-body">    -->
-                            <!--<p class="yekanFont">-->
-                            <!--<span class="label label-default miniTopSpace">مهندسی-کامپیوتر</span>-->
-                            <!--<span class="label label-default miniTopSpace">جزوه-درسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">مبانی برنامه نویسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">مبانی برنامه نویسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">awfawfیسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">مبانی برنامه نawffwaawfبرنامه نویسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">wafwafwaf</span>-->
-                            <!--<span class="label label-success miniTopSpace">a</span>-->
-                            <!--</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
-
-
                             <a href="#" class="text-center serifFont btn btn-primary mx-auto"> ورود به بخش
                                 دانلود </a>
                         </div>
@@ -830,60 +775,6 @@
                                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
                                 است.
                             </p>
-
-
-                            <!--<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">-->
-                            <!--<div class="panel panel-default">-->
-                            <!--<div class="panel-heading" role="tab" id="headingTwo">-->
-                            <!--<a class="collapsed" role="button" data-toggle="collapse"-->
-                            <!--data-parent="#accordion" href="#collapseTwo" aria-expanded="false"-->
-                            <!--aria-controls="collapseTwo">-->
-                            <!--<h4 class="panel-title text-right serifFont">-->
-                            <!--اطلاعات بیشتر-->
-                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                            <!--</h4>-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"-->
-                            <!--aria-labelledby="headingTwo">-->
-                            <!--<div class="panel-body">-->
-                            <!--<p class="serifFont text-justify">-->
-                            <!--لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده-->
-                            <!--از طراحان گرافیک است.-->
-                            <!--لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده-->
-                            <!--از طراحان گرافیک است.-->
-                            <!--</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
-
-                            <!--<div class="panel panel-default">-->
-                            <!--<div class="panel-heading" role="tab" id="headingOne">-->
-                            <!--<a role="button" data-toggle="collapse" data-parent="#accordion"-->
-                            <!--href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">-->
-                            <!--<h4 class="panel-title text-right serifFont">-->
-                            <!--برچسب ها-->
-                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                            <!--</h4>-->
-                            <!--</a>-->
-                            <!--</div>-->
-                            <!--<div id="collapseOne" class="panel-collapse" role="tabpanel"-->
-                            <!--aria-labelledby="headingOne">-->
-                            <!--<div class="panel-body">    -->
-                            <!--<p class="yekanFont">-->
-                            <!--<span class="label label-default miniTopSpace">مهندسی-کامپیوتر</span>-->
-                            <!--<span class="label label-default miniTopSpace">جزوه-درسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">مبانی برنامه نویسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">مبانی برنامه نویسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">awfawfیسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">مبانی برنامه نawffwaawfبرنامه نویسی</span>-->
-                            <!--<span class="label label-success miniTopSpace">wafwafwaf</span>-->
-                            <!--<span class="label label-success miniTopSpace">a</span>-->
-                            <!--</p>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
-                            <!--</div>-->
 
 
                             <a href="#" class="text-center serifFont btn btn-primary mx-auto"> ورود به بخش
@@ -994,7 +885,8 @@
                             <div class="feed-line">
                                 <i class="fa fa-twitter"></i>
                                 <p class="miniRightSpace"> لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و
-                                    با استفاده از طراحان</p>
+                                    با استفاده از طراحان
+                                </p>
                             </div>
                             <div class="feed-line">
                                 <i class="fa fa-facebook-square"></i>
@@ -1056,71 +948,9 @@
                 <script>document.write(new Date().getFullYear())</script>
                 Sneeds Co. All Rights Reserved
             </div>
-
-            <div class="pull-center">
-                <button class="btn btn-fab btn-fab-mini pull-center goUpBtn" id="goUpBtn">
-                    <i class="material-icons">keyboard_arrow_up</i>
-                </button>
-            </div>
         </div>
     </footer>
 
-    <!--
-    <footer class="footer footer-black footer-big">
-        <div class="container">
-            <div class="content">
-                <div class="row">
-                    <div class="col-md-3"></div>
-                    <div class="col-md-2"></div>
-                    <div class="col-md-2"></div>
-                    <div class="col-md-2"></div>
-                    <div class="col-md-3">
-                        <h5 class="yekanFont text-right">درباره ما</h5>
-                        <p class="yekanFont text-justify" style="font-size:15px">
-                            اسنیدز یک گروه دانشجویی متشکل از دانشجویان دانشگاه صنعتی امیرکبیر است. هدف ما ارائه خدمات
-                            آموزشی
-                            برای دانشجویان و آگاهی بخشی در مورد اپلای از طریق مصاحبه با دانشجویان پذیرش گرفته می‌باشد .
-                        </p>
-
-                        <div class="customInfo text-right rtl">
-                            <i class="material-icons float-right">location_on</i>
-                            <address class="yekanFont text-justify colorWhite miniTopSpace"
-                                     style="font-size:15px;margin-right:10px;">
-                                تهران، دانشگاه صنعتی امیرکبیر، ساختمان ابوریحان
-                            </address>
-                        </div>
-
-                        <div class="customInfo text-right rtl">
-                            <i class="material-icons float-right">phone_iphone</i>
-                            <p class="yekanFont text-justify float-right colorWhite miniTopSpace"
-                               style="font-size:15px;margin-right:5px;">
-                                تلفن: 8724 447 0935
-                            </p>
-                            <div class="clearfix"></div>
-                        </div>
-
-                        <div class="customInfo text-right rtl">
-                            <i class="material-icons float-right topSpace">email</i>
-                            <address class="gadugiFont text-justify float-right colorWhite topSpace"
-                                     style="font-size:15px;margin-right:5px;">
-                                info@sneeds.ir
-                            </address>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-                <div class="copyright yekanFont pull-right text-right">
-                    تمامی حقوق نزد اسنیدز محفوظ است.
-                </div>
-                <button class="btn btn-fab btn-fab-mini pull-left goUpBtn">
-                    <i class="material-icons">keyboard_arrow_up</i>
-                </button>
-            </div>
-
-        </div>
-    </footer>
-    -->
 </div>
 
 
