remove file desc,add file size in dl btn tooltip,goUpBtn removed

--- a/booklet.html
+++ b/booklet.html
@@ -102,6 +102,7 @@
                 </div>
                 <div class="col-md-6">
                     <h2 class="title yekanFont text-right rtl">نام جزوه برای دانلود</h2>
+                    <h4 class="title yekanFont text-right rtl">موضوع جزوه</h4>
                     <div id="acordeon">
 
                         <div class="panel-group" id="accordion">
@@ -119,40 +120,37 @@
                                 <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false"
                                      style="height: 0px;">
                                     <div class="panel-body">
-                                        <p class="text-justify yekanFont">
-                                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                                            طراحان
-                                            گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم
-                                            است و
-                                            برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
-                                            کاربردی
-                                            می باشد.
-                                        </p>
+
+                                        <p class="yekanFont text-justfy rtl">نام جزوه: نام کامل جزوه</p>
+                                        <p class="yekanFont text-justfy rtl">موضوع جزوه: موضوع کامل جزوه</p>
+                                        <p class="yekanFont text-justfy rtl">استاد جزوه: نام کامل استاد جزوه</p>
+                                        <p class="yekanFont text-justfy rtl">نویسنده جزوه: نام کامل نویسنده جزوه</p>
+
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="panel panel-border panel-default">
-                                <div class="panel-heading" role="tab" id="headingTwo">
-                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
-                                       aria-controls="collapseTwo" class="collapsed" aria-expanded="false">
-                                        <h4 class="panel-title yekanFont text-right rtl">
-                                            توضیحات فایل
-                                            <i class="material-icons">keyboard_arrow_down</i>
-                                        </h4>
-                                    </a>
-                                </div>
-                                <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false"
-                                     style="height: 0px;">
-                                    <div class="panel-body text-justify yekanFont">
-                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
-                                        گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و
-                                        برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
-                                        کاربردی
-                                        می باشد.
-                                    </div>
-                                </div>
-                            </div>
+                            <!--<div class="panel panel-border panel-default">-->
+                                <!--<div class="panel-heading" role="tab" id="headingTwo">-->
+                                    <!--<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"-->
+                                       <!--aria-controls="collapseTwo" class="collapsed" aria-expanded="false">-->
+                                        <!--<h4 class="panel-title yekanFont text-right rtl">-->
+                                            <!--توضیحات فایل-->
+                                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
+                                        <!--</h4>-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false"-->
+                                     <!--style="height: 0px;">-->
+                                    <!--<div class="panel-body text-justify yekanFont">-->
+                                        <!--لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان-->
+                                        <!--گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و-->
+                                        <!--برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای-->
+                                        <!--کاربردی-->
+                                        <!--می باشد.-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
 
                             <div class="panel panel-border panel-default">
                                 <div class="panel-heading" role="tab" id="headingThree">
@@ -195,7 +193,7 @@
                         </div>
                     </div>
                     <div class="row text-right">
-                        <button class="btn btn-primary yekanFont">
+                        <button class="btn btn-primary yekanFont normalFontSize" rel="tooltip" title data-original-title="حجم : 24 مگابایت">
                             &nbsp; دانلود جزوه &nbsp;
                             <i class="material-icons">file_download</i>
                         </button>
@@ -304,12 +302,6 @@
             Copyright ©
             <script>document.write(new Date().getFullYear())</script>
             Sneeds Co. All Rights Reserved
-        </div>
-
-        <div class="pull-center">
-            <button class="btn btn-fab btn-fab-mini pull-center goUpBtn" id="goUpBtn">
-                <i class="material-icons">keyboard_arrow_up</i>
-            </button>
         </div>
     </div>
 </footer>
