fixed top navbar and login/register btn added

--- a/booklet.html
+++ b/booklet.html
@@ -45,28 +45,19 @@
         </div>
 
         <div class="collapse navbar-collapse yekanFont" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right text-right">
-                <li class="customHover"><a href="booklet.html" target="_blank">لینک تست 3</a></li>
-                <li class="customHover"><a href="booklet.html" target="_blank">لینک تست 2</a></li>
-                <li class="customHover"><a href="booklet.html" target="_blank">لینک تست 1</a></li>
-                <li class="dropdown customHover">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">&nbspجزوات&nbsp<b
-                            class="caret text-left"></b> </a>
-                    <ul class="dropdown-menu text-center">
-                        <li class="customHover"><a href="#">مهندسی کامپیوتر</a></li>
-                        <li class="customHover"><a href="#">مهندسی برق</a></li>
-                        <li class="customHover"><a href="#">فیزیک</a></li>
-                        <li class="divider"></li>
-                        <li class="customHover"><a href="#">همه دسته ها</a></li>
-                        <li class="divider"></li>
-                        <li class="customHover"><a href="#">دسته خاص</a></li>
-                    </ul>
-                </li>
-
-                <li class="customHover"><a href="#">تماس با ما</a></li>
-
-                <li class="active customHover"><a href="bookletList.html">صفحه اول</a></li>
+            <ul class="nav navbar-nav navbar-right text-right rtl">
+                <li class="pull-right"><a href="#">صفحه اول</a></li>
+                <li class="pull-right"><a href="bookletList.html">جزوات</a></li>
+                <li class="pull-right"><a href="cafeList.html" target="nk">کافه ها</a></li>
+                <li class="pull-right active"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
+                <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
+                <li class="pull-right"><a href="#" target="">لینک تست 2</a></li>
+                <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                    <i class="fas fa-sign-in-alt"></i>
+                    ورود / عضویت
+                </a></li>
             </ul>
+
 
             <form class="navbar-form navbar-left bookletSearchForm" role="search">
                 <div class="form-group form-primary">
@@ -129,28 +120,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!--<div class="panel panel-border panel-default">-->
-                                <!--<div class="panel-heading" role="tab" id="headingTwo">-->
-                                    <!--<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"-->
-                                       <!--aria-controls="collapseTwo" class="collapsed" aria-expanded="false">-->
-                                        <!--<h4 class="panel-title yekanFont text-right rtl">-->
-                                            <!--توضیحات فایل-->
-                                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
-                                        <!--</h4>-->
-                                    <!--</a>-->
-                                <!--</div>-->
-                                <!--<div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false"-->
-                                     <!--style="height: 0px;">-->
-                                    <!--<div class="panel-body text-justify yekanFont">-->
-                                        <!--لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان-->
-                                        <!--گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و-->
-                                        <!--برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای-->
-                                        <!--کاربردی-->
-                                        <!--می باشد.-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
 
                             <div class="panel panel-border panel-default">
                                 <div class="panel-heading" role="tab" id="headingThree">
