--- a/bookletList.html
+++ b/bookletList.html
@@ -46,27 +46,17 @@
         </div>
 
         <div class="collapse navbar-collapse yekanFont" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right text-right">
-                <li class="customHover"><a href="booklet.html" target="_blank">لینک تست 3</a></li>
-                <li class="customHover"><a href="booklet.html" target="_blank">لینک تست 2</a></li>
-                <li class="customHover"><a href="booklet.html" target="_blank">لینک تست 1</a></li>
-                <li class="dropdown customHover">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">&nbspجزوات&nbsp<b
-                            class="caret text-left"></b> </a>
-                    <ul class="dropdown-menu text-center">
-                        <li class="customHover"><a href="#">مهندسی کامپیوتر</a></li>
-                        <li class="customHover"><a href="#">مهندسی برق</a></li>
-                        <li class="customHover"><a href="#">فیزیک</a></li>
-                        <li class="divider"></li>
-                        <li class="customHover"><a href="#">همه دسته ها</a></li>
-                        <li class="divider"></li>
-                        <li class="customHover"><a href="#">دسته خاص</a></li>
-                    </ul>
-                </li>
-
-                <li class="customHover"><a href="#">تماس با ما</a></li>
-
-                <li class="active customHover"><a href="#">صفحه اول</a></li>
+            <ul class="nav navbar-nav navbar-right text-right rtl">
+                <li class="pull-right"><a href="#">صفحه اول</a></li>
+                <li class="pull-right active"><a href="bookletList.html">جزوات</a></li>
+                <li class="pull-right"><a href="cafeList.html" target="nk">کافه ها</a></li>
+                <li class="pull-right"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
+                <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
+                <li class="pull-right"><a href="#" target="">لینک تست 2</a></li>
+                <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                    <i class="fas fa-sign-in-alt"></i>
+                    ورود / عضویت
+                </a></li>
             </ul>
 
             <form class="navbar-form navbar-left bookletSearchForm" role="search">
