--- a/booklet.html
+++ b/booklet.html
@@ -52,7 +52,8 @@
                 <li class="pull-right active"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 2</a></li>
-                <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                <li class="pull-right"><a href="auth.html"
+                                          class="normalFontSize2 text-right rtl btn btn-round btn-primary">
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
                 </a></li>
@@ -70,8 +71,6 @@
         </div>
     </div>
 </nav>
-
-
 
 
 <div class="page-header header-filter" data-parallax="true" filter-color="primary"
@@ -94,32 +93,68 @@
                 <div class="col-md-6">
                     <h2 class="title yekanFont text-right rtl">نام جزوه برای دانلود</h2>
                     <h4 class="title yekanFont text-right rtl">موضوع جزوه</h4>
+                    <hr>
+
+                    <div>
+                        <div class="icon icon-primary pull-right" style="margin-left:10px">
+                            <i class="material-icons">format_color_text</i>
+                        </div>
+                        <div class="description">
+                            <h4 class="info-title yekanFont">نویسنده : هادی</h4>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="icon icon-primary pull-right" style="margin-left:10px">
+                            <i class="material-icons">picture_as_pdf</i>
+                        </div>
+                        <div class="description">
+                            <h4 class="info-title yekanFont">حجم : 12 مگابایت</h4>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="icon icon-primary pull-right" style="margin-left:10px">
+                            <i class="material-icons">personal_video</i>
+                        </div>
+                        <div class="description">
+                            <h4 class="info-title yekanFont">وضعیت مشاهده : مشاهده شده</h4>
+                        </div>
+                    </div>
+
+
+                    <hr>
+                    <!--<span class="label label-info yekanFont rtl text-right">-->
+                        <!--<i class="material-icons">format_color_text</i>-->
+                        <!--نویسنده :-->
+                    <!--</span>-->
+
                     <div id="acordeon">
 
                         <div class="panel-group" id="accordion">
 
-                            <div class="panel panel-border panel-default">
-                                <div class="panel-heading" role="tab" id="headingOne">
-                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
-                                       aria-expanded="false" aria-controls="collapseOne" class="collapsed">
-                                        <h4 class="panel-title yekanFont rtl text-right">
-                                            توضیحات درسی
-                                            <i class="material-icons">keyboard_arrow_down</i>
-                                        </h4>
-                                    </a>
-                                </div>
-                                <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false"
-                                     style="height: 0px;">
-                                    <div class="panel-body">
+                            <!--<div class="panel panel-border panel-default">-->
+                            <!--<div class="panel-heading" role="tab" id="headingOne">-->
+                            <!--<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"-->
+                            <!--aria-expanded="false" aria-controls="collapseOne" class="collapsed">-->
+                            <!--<h4 class="panel-title yekanFont rtl text-right">-->
+                            <!--توضیحات درسی-->
+                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
+                            <!--</h4>-->
+                            <!--</a>-->
+                            <!--</div>-->
+                            <!--<div id="collapseOne" class="panel-collapse collapse" aria-expanded="false"-->
+                            <!--style="height: 0px;">-->
+                            <!--<div class="panel-body">-->
 
-                                        <p class="yekanFont text-justfy rtl">نام جزوه: نام کامل جزوه</p>
-                                        <p class="yekanFont text-justfy rtl">موضوع جزوه: موضوع کامل جزوه</p>
-                                        <p class="yekanFont text-justfy rtl">استاد جزوه: نام کامل استاد جزوه</p>
-                                        <p class="yekanFont text-justfy rtl">نویسنده جزوه: نام کامل نویسنده جزوه</p>
+                            <!--<p class="yekanFont text-justfy rtl">نام جزوه: نام کامل جزوه</p>-->
+                            <!--<p class="yekanFont text-justfy rtl">موضوع جزوه: موضوع کامل جزوه</p>-->
+                            <!--<p class="yekanFont text-justfy rtl">استاد جزوه: نام کامل استاد جزوه</p>-->
+                            <!--<p class="yekanFont text-justfy rtl">نویسنده جزوه: نام کامل نویسنده جزوه</p>-->
 
-                                    </div>
-                                </div>
-                            </div>
+                            <!--</div>-->
+                            <!--</div>-->
+                            <!--</div>-->
 
                             <div class="panel panel-border panel-default">
                                 <div class="panel-heading" role="tab" id="headingThree">
@@ -162,10 +197,15 @@
                         </div>
                     </div>
                     <div class="row text-right">
-                        <button class="btn btn-primary yekanFont normalFontSize" rel="tooltip" title data-original-title="حجم : 24 مگابایت">
+                        <button class="btn btn-primary yekanFont normalFontSize" rel="tooltip" title
+                                data-original-title="حجم : 24 مگابایت">
                             &nbsp; دانلود جزوه &nbsp;
                             <i class="material-icons">file_download</i>
                         </button>
+                        <a class="btn btn-danger yekanFont normalFontSize pull-left" href="bookletList.html">
+                            بازگشت
+                            <i class="material-icons">arrow_back_ios</i>
+                        </a>
                     </div>
                 </div>
             </div>
