fixing top menu color on scroll bug

--- a/booklet.html
+++ b/booklet.html
@@ -23,7 +23,7 @@
 <div id="siteTop"></div>
 <!-- Navbar will come here -->
 
-<nav class="navbar navbar-right navbar-default bg-primary navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -48,8 +48,8 @@
             <ul class="nav navbar-nav navbar-right text-right rtl">
                 <li class="pull-right"><a href="#">صفحه اول</a></li>
                 <li class="pull-right"><a href="bookletList.html">جزوات</a></li>
-                <li class="pull-right"><a href="cafeList.html" target="nk">کافه ها</a></li>
-                <li class="pull-right active"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
+                <li class="pull-right"><a href="cafeList.html">کافه ها</a></li>
+                <li class="pull-right active"><a href="booklet.html">صفحه تکی جزوه</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 2</a></li>
                 <li class="pull-right"><a href="auth.html"
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<div class="section section-gray">
+<div class="section section-gray" style="z-index:9;">
     <div class="container">
         <div class="main main-raised main-product">
             <div class="row">
