--- a/bookletList.html
+++ b/bookletList.html
@@ -24,7 +24,7 @@
 <div id="siteTop"></div>
 <!-- Navbar will come here -->
 
-<nav class="navbar navbar-right navbar-transparent navbar-fixed-top navbar-color-on-scroll" color-on-scorll="200" role="navigation">
+<nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
