removed bugful go up button

--- a/bookletList.html
+++ b/bookletList.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="assets/css/sneedsCustom.css">
 </head>
 <body style="height:100%">
+<!--<a href="#" class="goUpBtn btn btn-round btn-default btn-fab btn-fab-mini" id="goUpBtn" style="z-index:99999;position:absolute;bottom:0;-->
+<!--left:0;">-->
+    <!--<i class="material-icons">keyboard_arrow_up</i>-->
+<!--</a>-->
 <div id="siteTop"></div>
 <!-- Navbar will come here -->
 
@@ -837,6 +841,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <footer class="footer footer-black footer-big">
@@ -945,6 +950,9 @@
 
 
 </body>
+
+
+
 
 <div class="modal fade" id="sneedsAdvancedSearchModal" tabindex="-1" role="dialog"
      aria-labelledby="sneedsAdvancedSearchModal" aria-hidden="true">
